# SEL3-2026-Groep-1

./: .gitignore  .pre-commit-config.yaml  .venv  README.md  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  tests.yml
api-docs/: .buildinfo  README.md  index.html  objects.inv
api-docs/_modules/: index.html
api-docs/api/: brittle_star_locomotion.controller.html  brittle_star_locomotion.cpg.html  brittle_star_locomotion.html  brittle_star_locomotion.util.html
api-docs/doctrees/: environment.pickle  index.doctree
api-docs/html/: index.html  objects.inv
api-docs/source/: conf.py  index.rst
checkpoints/: angle_to_target_0  angle_to_target_1  angle_to_target_2  angle_to_target_3  angle_to_target_4  angle_to_target_two_arms_0  angle_to_target_two_arms_1  formatted_0  formatted_1  formatted_2  formatted_3  formatted_4  my_checkpoint  test_checkpoint  test_checkpoint_0  test_checkpoint_1  test_checkpoint_2  test_checkpoint_3  test_checkpoint_4  vectorized_0  vectorized_1  vectorized_2  vectorized_3  vectorized_4
configs/: 2_layer_eval.yaml  4_layer_eval.yaml  base_config.yaml  experiment-01.yaml  experiment-03.yaml  experiment-04.yaml  experiment-05.yaml  experiment-06.yaml  experiment-07-eval-range-1-5.yaml  experiment-07.yaml  experiment-08.yaml  experiment-09-eval-range-1-5.yaml  test_config.yaml  training.yaml
configs/evaluation/: 4_layer_eval.yaml  eval_config.yaml  no_joint_pos_eval.yaml
configs/experiment/: experiment-02.yaml  (+2 more)
docs/: README.md  abstract.typ  known-bugs.md
plots/: index.js  package.json
scripts/: README.md  brittle_star_locomotion.pbs  convert_to_bgr.py  deploy_api_docs.sh  preprocess_wandb_learning_curve_comparison.sh  release.sh
tests/: test_core.py  test_cpg.py  test_cpg_rowing_integration.py  test_environment_integration.py  test_equations.py  test_rowing_gait_controller.py  test_singleton.py  test_solver.py
wandb/: latest-run
(+133 files in other folders)
