[project]
name = "brittle-star-locomotion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "biorobot>=0.4.2",
    "evosax>=0.2.0",
    "ipykernel>=7.2.0",
    "jax[cpu,cuda12,cuda13]>=0.9.0.1",
    "matplotlib>=3.10.8",
    "mediapy>=1.2.6",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "wandb>=0.25.0",
]
