[project]
name = "brittle-star-locomotion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "biorobot>=0.4.2",
    "evosax>=0.2.0",
    "ipykernel>=7.2.0",
    "jax[cpu]>=0.9.0.1; sys_platform == 'darwin'",
    "jax[cpu, cuda]>=0.9.0.1; sys_platform == 'linux'",
    "matplotlib>=3.10.8",
    "mediapy>=1.2.6",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "wandb>=0.25.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra: show extra test summary info
# --cov: produce coverage report for your src folder
addopts = "-ra --cov=src"
