[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brittle-star-locomotion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "biorobot>=0.4.2",
    "cpprb>=11.0.0",
    "evosax>=0.2.0",
    "matplotlib>=3.10.8",
    "mediapy>=1.2.6",
    "omegaconf>=2.3.0",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "wandb>=0.25.0",
]

[project.optional-dependencies]
cpu = ["jax[cpu]"]
gpu = ["jax[cuda]==0.9.1"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ipykernel>=7.2.0",
    "hatch>=1.16.3",
    "tensorboard>=2.20.0",
]

[tool.ruff]
line-length = 150
target-version = "py312"
